--- a/service.html
+++ b/service.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>service title</title>
+    <title>service file</title>
 </head>
 <body>
-    some text here
+    
 </body>
 </html>
